--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+          alt="Lion goes yawn"
+    />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+          alt="Lion goes yawn"
+          title="A cute brown boy gets tired"
+    />
   </body>
 </html>
